--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 
 body {
-  margin-left: 24px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .title {
   /* margin-left: 100px; */
@@ -64,8 +65,8 @@ p {
 }
 
 .emailbutton:hover {
-  color: black;
-  -webkit-text-fill-color: black;
+  color: blue;
+  -webkit-text-fill-color: blue;
   text-decoration: underline;
   border-bottom: 0.5px solid white;
 
@@ -106,12 +107,18 @@ a.h3link:hover {
   position:absolute;
   width: 70vh;
   height: 100vw;
+  -webkit-scrollbar {
+    display: none;
+  }
 }
 #container2 {
   transform: rotate(90deg) translateY(-100vh);
   transform-origin: top left;
   white-space:nowrap;
   font-size:0;
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 #container .box {
