--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,6 +89,10 @@ h3 {
   color: blue;
 }
 
+/* button.idk {
+  text-decoration: underline;
+} */
+
 a.h3link:hover {
   color: black;
   -webkit-text-fill-color: black;
