--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,12 @@
+:root {
+  --background: white;
+  --accent: white;
+}
 
 body {
   margin-left: 50px;
   margin-right: 50px;
+  background-color: var(--background);
 }
 
 .title {
@@ -10,18 +15,18 @@ body {
   width: 400px;
 }
 
-.hoverTitle {
-  display: none;
+.titleDesignPage {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 300px;
 }
 
 p {
-  color: blue;
-   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  color: var(--accent);
+   -webkit-text-fill-color: var(--background); /* Will override color (regardless of order) */
    -webkit-text-stroke-width: 1px;
   font-size: 45px;
   font-family: GenBkBasI;
-  /* margin-left: 100px;
-  margin-right: 100px; */
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -33,42 +38,39 @@ p {
 }
 
 .mainlink {
-  color: blue;
-  /* text-decoration-color: blue !important; */
-  /* text-decoration: underline; */
-  border-bottom: 0.5px solid blue;
+  color: var(--accent);
+  border-bottom: 0.5px solid var(--accent);
   padding: none;
-  /* color: pink; */
-   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+   -webkit-text-fill-color: var(--background); /* Will override color (regardless of order) */
    -webkit-text-stroke-width: 1px;
    margin-bottom: -10px;
  }
 
 .mainlink:hover {
-  color: blue;
-  -webkit-text-fill-color: blue;
-  text-decoration-color: blue !important;
+  color: var(--accent);
+  -webkit-text-fill-color: var(--accent);
+  text-decoration-color: var(--accent) !important;
   text-decoration: underline;
-  border-bottom: 0.5px solid white;
+  border-bottom: 0.5px solid var(--background);
 }
 
 
 .emailbutton {
-  color: blue;
-   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  color: var(--accent);
+   -webkit-text-fill-color: var(--background); /* Will override color (regardless of order) */
    -webkit-text-stroke-width: 1px;
   font-size: 45px;
   font-family: GenBkBasI;
   border: none;
-  background-color: none;
-  border-bottom: 0.5px solid blue;
+  background-color: var(--background);
+  border-bottom: 0.5px solid var(--accent);
 }
 
 .emailbutton:hover {
-  color: blue;
-  -webkit-text-fill-color: blue;
+  color: var(--accent);
+  -webkit-text-fill-color: var(--accent);
   text-decoration: underline;
-  border-bottom: 0.5px solid white;
+  border-bottom: 0.5px solid var(--background);
 
 }
 
@@ -78,20 +80,17 @@ input {
 
 /* DESIGN */
 h3 {
-  color: blue;
+  color: var(--accent);
   font-size: 12px;
   position: relative;
   width: 100%;
-  font-family: Helvetica;
+  font-family: Padauk;
 }
 
 .h3link {
-  color: blue;
+  color: var(--accent);
 }
 
-/* button.idk {
-  text-decoration: underline;
-} */
 
 a.h3link:hover {
   color: black;
@@ -250,7 +249,7 @@ a.h3link:hover {
    /* font: inherit; */
    cursor: pointer;
    outline: inherit !important;
-   font: Helvetica;
+   font: Padauk;
    font-size: 12pt;
 }
 
@@ -292,6 +291,11 @@ a.h3link:hover {
 @font-face {
   font-family: "GenBkBasI";
   src: url('./fonts/GenBkBasI.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "Paduak";
+  src: url('./fonts/PadaukRegular.ttf') format('truetype');
 }
 
 /* @media (max-width:600px) {
