--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,24 +1,34 @@
 :root {
   --background: white;
-  --accent: white;
+  --accent: pink;
+}
+
+/* fonts */
+@font-face {
+  font-family: "DreamOrphansBdIt";
+  src: url('./fonts/dreamorphansbd.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "GenBkBasI";
+  src: url('./fonts/GenBkBasI.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "Paduak";
+  src: url('./fonts/PadaukRegular.ttf') format('truetype');
 }
 
 body {
+  /* margin-left: 50px;
+  margin-right: 50px; */
+  background-color: var(--background);
+  cursor: url('path-to-image.png'), auto;
+}
+
+.wrapper {
   margin-left: 50px;
   margin-right: 50px;
-  background-color: var(--background);
-}
-
-.title {
-  padding-top: 50px;
-  padding-bottom: 20px;
-  width: 400px;
-}
-
-.titleDesignPage {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  width: 300px;
 }
 
 p {
@@ -31,17 +41,36 @@ p {
   margin-bottom: 0px;
 }
 
-.realWinston1 {
-  display:none;
+h3 {
+  color: var(--accent);
+  font-size: 15px;
   position: relative;
-  max-width: 100px;
+  width: 100%;
+  font-family: Padauk;
+}
+
+input {
+  display: none;
+}
+
+.title {
+  padding-top: 50px;
+  padding-bottom: 20px;
+  width: 400px;
+}
+
+.titleDesignPage {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 300px;
+  margin-left: 50px;
 }
 
 .mainlink {
   color: var(--accent);
   border-bottom: 0.5px solid var(--accent);
   padding: none;
-   -webkit-text-fill-color: var(--background); /* Will override color (regardless of order) */
+   -webkit-text-fill-color: var(--background);
    -webkit-text-stroke-width: 1px;
    margin-bottom: -10px;
  }
@@ -54,10 +83,9 @@ p {
   border-bottom: 0.5px solid var(--background);
 }
 
-
 .emailbutton {
   color: var(--accent);
-   -webkit-text-fill-color: var(--background); /* Will override color (regardless of order) */
+   -webkit-text-fill-color: var(--background);
    -webkit-text-stroke-width: 1px;
   font-size: 45px;
   font-family: GenBkBasI;
@@ -71,42 +99,163 @@ p {
   -webkit-text-fill-color: var(--accent);
   text-decoration: underline;
   border-bottom: 0.5px solid var(--background);
-
-}
-
-input {
-  display: none;
-}
-
-/* DESIGN */
-h3 {
-  color: var(--accent);
-  font-size: 12px;
-  position: relative;
-  width: 100%;
-  font-family: Padauk;
 }
 
 .h3link {
   color: var(--accent);
 }
 
-
 a.h3link:hover {
-  color: black;
-  -webkit-text-fill-color: black;
-  text-decoration-color: black !important;
+  color: red;
+  -webkit-text-fill-color: red;
+  text-decoration-color: red !important;
   text-decoration: underline;
-  /* border-bottom: 0.5px solid white; */
 }
 
+/* project page */
+.header {
+  top: 0;
+  width: 100%;
+  position: fixed;
+  height: auto;
+  background-color: var(--background);
+  border-bottom: 2px solid var(--accent);
+  z-index: 15;
+}
+
+.footer {
+
+}
+
+.col-3 {
+  flex-grow: 1;
+  max-width: 33.333334%;
+  display: flex;
+}
+
+.col-4 {
+  flex-grow: 1;
+  max-width: 25%;
+  display: flex;
+}
+
+.col-3 > h3 {
+  text-align: center;
+  padding-bottom: 20px;
+  margin: 0px;
+  align-self: flex-end;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+}
+
+.col {
+  flex-grow: 1;
+  max-width: 50%;
+}
+
+.col > img {
+  width: 60%;
+}
+
+
+
+.project {
+  padding-bottom: 50px;
+}
+
+.project-separator {
+  border-bottom: 2px solid var(--accent);
+}
+
+.project-name {
+  text-align: center;
+  font-size: 70px;
+  padding-top: 25px;
+  margin-bottom: -45px;
+}
+
+.project-div {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.project-grid {
+  display: grid;
+}
+
+.gif-box {
+  border: 2px solid var(--accent);
+  padding: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.gif-box-mobile {
+  border: 2px solid var(--accent);
+  padding: 20px;
+  width: 40%;
+  text-align: center;
+  margin-left: 30%;
+  margin-right: 30%;
+}
+
+.gif-box > img {
+  width: 100%;
+}
+
+.gif-box-mobile > img {
+  width: 100%;
+}
+
+
+
+/* .self {
+  position: fixed;
+  top: 55%;
+  left: 80%;
+  width: 225px;
+}
+
+.dog {
+  position:absolute;
+  width: 200px;
+}
+
+.dog:hover {
+  transform: rotate(0.01turn);
+}
+
+.img1 {
+  top: 0px;
+  left:720px;
+}
+
+.img2 {
+  top: 200px;
+  left:220px;
+}
+
+.img3 {
+  top: 340px;
+  left: 420px;
+} */
+
+/* .realWinston1 {
+  display:none;
+  position: relative;
+  max-width: 100px;
+} */
+
 /* lol the things i do for horizontal scroll */
-#container {
+/* #container {
   overflow-y:scroll;
   overflow-x:hidden;
   transform: rotate(270deg) translateX(-100%);
   transform-origin: top left;
-  /* background-color:#999; */
   position:absolute;
   width: 70vh;
   height: 100vw;
@@ -135,7 +284,6 @@ a.h3link:hover {
   color:#FFF;
   position:absolute;
   top:50%;
-  /* left:20%; */
   margin:-50px 0 0 -50px;
   line-height:1;
 }
@@ -239,25 +387,23 @@ a.h3link:hover {
 #container .big > div {
   width:690px;
   height:140px;
-}
+} */
 
-.designbutton {
+/* .designbutton {
   background: none !important;
    color: inherit;
    border: none;
    padding: 0! important;
-   /* font: inherit; */
    cursor: pointer;
    outline: inherit !important;
    font: Padauk;
    font-size: 12pt;
-}
+} */
 
-.buttonrow {
+/* .buttonrow {
   display: table;
-  width: 50%; /*Optional*/
-  table-layout: fixed; /*Optional*/
-  /* border-spacing: 20px; /*Optional*/ */
+  width: 50%;
+  table-layout: fixed;
 }
 
 .buttoncol {
@@ -278,25 +424,7 @@ a.h3link:hover {
 
 .locustcontainer {
   display: none;
-}
-
-
-/* fonts */
-
-@font-face {
-  font-family: "DreamOrphansBdIt";
-  src: url('./fonts/dreamorphansbd.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: "GenBkBasI";
-  src: url('./fonts/GenBkBasI.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: "Paduak";
-  src: url('./fonts/PadaukRegular.ttf') format('truetype');
-}
+} */
 
 /* @media (max-width:600px) {
   p {
@@ -305,34 +433,3 @@ a.h3link:hover {
     margin: 5px;
   }
 } */
-
-.self {
-  position: fixed;
-  top: 55%;
-  left: 80%;
-  width: 225px;
-}
-
-.dog {
-  position:absolute;
-  width: 200px;
-}
-
-.dog:hover {
-  transform: rotate(0.01turn);
-}
-
-.img1 {
-  top: 0px;
-  left:720px;
-}
-
-.img2 {
-  top: 200px;
-  left:220px;
-}
-
-.img3 {
-  top: 340px;
-  left: 420px;
-}
